# antigravity-hackathon

./: .gitignore  README.md  get_step9.py  step9_full.txt
insight2action-backend/: .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
insight2action-backend/api/: index.py
insight2action-backend/app/: __init__.py  main.py
insight2action-backend/app/agents/: __init__.py  action_recommendation_agent.py  action_simulation_agent.py  content_understanding_agent.py  domain_detection_agent.py  execution_agent.py  impact_analysis_agent.py  insight_extraction_agent.py
insight2action-backend/app/routes/: analyze.py  execute.py  simulate.py
insight2action-backend/app/schemas/: analysis.py
insight2action-backend/app/services/: agent_orchestrator.py  ai_analysis_service.py  mock_analysis.py
insight2action-backend/outputs/: action_summary.md  enhance_error_handling_user_guidance_report.md
insight2action-mobile/: .gitignore  App.tsx  app.json  eas.json  global.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json
insight2action-mobile/app/: _layout.tsx  analyzing.tsx  history.tsx  index.tsx  input.tsx  result.tsx
insight2action-mobile/components/: AgentExecutionConsole.tsx  AgentTrace.tsx  AppButton.tsx  AppCard.tsx  AppHeader.tsx  ConfidenceBar.tsx  ExecutiveSummaryCard.tsx  ScreenContainer.tsx  SeverityBadge.tsx
insight2action-mobile/constants/: theme.ts
insight2action-mobile/lib/: api.ts  historyStorage.ts  tempStore.ts  types.ts
