[project]
name = "insight2action-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "et-xmlfile>=2.0.0",
    "fastapi[standard]>=0.136.1",
    "openai-agents>=0.17.2",
    "openpyxl>=3.1.5",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
]
